# rag_chatbot

./: .gitignore
api-server/: Dockerfile  README.md  deploy-lambda.sh  docker-compose.yml  lambda_function.py  main.tf  pyproject.toml  requirements-lambda.txt  serverless.yml  variables.tf
api-server/app/: __init__.py  bedrock_client.py  chat_service.py  document_store.py  embeddings.py  main.py  retriever.py
api-server/app/models/: chat_models.py
api-server/app/routers/: chat.py
api-server/app/services/: rag_service.py
api-server/app/utils/: cost_tracker.py  logger_config.py  s3_utils.py
api-server/nginx/: nginx.conf
