[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "expense-policy-chatbot"
version = "0.1.0"
description = "biztechi 챗봇"
authors = [
    {name = "Jeongwon Lee", email = "jeongwon@biztechi.com"}
]
requires-python = ">=3.9,<4.0"

[tool.poetry]
package-mode = false
packages = [
    { include = "expense_policy_chatbot" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.3"
uvicorn = "^0.27.1"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
langchain-core = "^0.3.46"
boto3 = "^1.37.16"
pypdf = "^4.3.1"
faiss-cpu = "^1.10.0"
python-multipart = "^0.0.6"
langchain-aws = "^0.2.16"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
